--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 body {
-  position: relative
+  position: relative;
 }
 
 ::-webkit-scrollbar {
@@ -75,28 +75,28 @@ body {
 }
 
 .bg-gray {
-  background-color: #EFEFEF;
+  background-color: #efefef;
 }
 
 .b-red {
   background-color: #cc0000;
-  color: #FFF;
+  color: #fff;
 }
- 
+
 .banner {
   padding: 2rem 0 1rem;
   background-color: #fff;
-  background-image: url('../img/imagem_1.png');
+  background-image: url("../img/imagem_1.png");
   min-height: 55rem;
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: 'RatioModern-Small';
+  font-family: "RatioModern-Small";
   padding: 16rem 0rem 0rem;
   background-position: 0 -5rem;
 }
 
 .banner b {
-  font-family: 'RatioModern-ExtraBold';
+  font-family: "RatioModern-ExtraBold";
 }
 
 .title {
@@ -106,12 +106,12 @@ body {
 }
 
 .title h1 {
-  font-family: 'speedee_Bd';
+  font-family: "speedee_Bd";
   font-size: 4rem;
   margin: 0;
   padding-right: 0.5rem;
   width: 45%;
-  color: #FFF;
+  color: #fff;
   text-align: center;
   letter-spacing: 2px;
 }
@@ -134,14 +134,14 @@ body {
 }
 
 .subtitle p {
-  color: #FFF;
-  font-family: 'RobotoRegular';
+  color: #fff;
+  font-family: "RobotoRegular";
   font-size: 1.5rem;
   padding: 1% 25%;
 }
 
 .subtitle b {
-  font-family: 'RobotoBold';
+  font-family: "RobotoBold";
 }
 
 .btn-entenda {
@@ -157,14 +157,13 @@ body {
   margin: 2rem auto;
   color: #000;
   text-decoration: none;
-  font-family: 'RobotoRegular';
+  font-family: "RobotoRegular";
 }
 
 .imagem .chevron {
   width: 23%;
   padding: 0 0.3rem;
 }
-
 
 .masthead__tag {
   height: 20px;
@@ -189,9 +188,9 @@ body {
   width: 165px;
 }
 
-.first-cite {  
+.first-cite {
   font-size: 1.5rem;
-  font-family: 'RobotoRegular';
+  font-family: "RobotoRegular";
 }
 
 .first-cite p {
@@ -200,7 +199,7 @@ body {
 }
 
 .second-cite {
-  font-family: 'RobotoBold';
+  font-family: "RobotoBold";
   margin: 2.5rem;
 }
 
@@ -209,7 +208,7 @@ body {
   width: 4rem;
   font-size: 4rem;
   color: #cc0000;
-  font-family: 'RobotoRegular';
+  font-family: "RobotoRegular";
 }
 
 blockquote {
@@ -218,7 +217,7 @@ blockquote {
 }
 
 cite {
-  font-family: 'RobotoBold';
+  font-family: "RobotoBold";
   text-decoration: none;
   font-style: normal;
   color: #666666;
@@ -232,7 +231,7 @@ cite {
 }
 
 cite:before {
-  content: ' \2015 ';
+  content: " \2015 ";
 }
 
 .imagem2 {
@@ -263,8 +262,30 @@ cite:before {
   display: inline-flex;
 }
 
-.acordo-abs{ 
+.acordo-abs {
   bottom: 12rem;
   height: 10rem;
   margin: 0 -8rem;
+}
+
+.fazer {
+  position: absolute;
+  top: 22%;
+  right: 15%;
+}
+
+.btn-fazer {
+  color: #fc8332;
+  border: 1px solid #fc8332;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  position: relative;
+}
+
+.span-fazer {
+  position: absolute;
+  font-size: 30px;
+  top: -11px;
+  left: 3px;
 }
