--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@
 }
 
 @font-face {
+  font-family: "RatioModern-Medium";
+  src: url("../fonts/Fontspring-DEMO-RatioModern-Medium.otf");
+}
+
+@font-face {
   font-family: "RatioModern-Regular";
   src: url("../fonts/Fontspring-DEMO-RatioModern-Regular.otf");
 }
@@ -28,6 +33,11 @@
   src: url("../fonts/Roboto-Regular.ttf");
 }
 
+@font-face {
+  font-family: "RobotoLight";
+  src: url("../fonts/Roboto-Light.ttf");
+}
+
 html,
 body {
   overflow-x: hidden;
@@ -44,7 +54,7 @@ body {
 /* Track */
 
 ::-webkit-scrollbar-track {
-  background: #cc0000;
+  background: #C21708;
 }
 
 /* Handle */
@@ -56,7 +66,7 @@ body {
 /* Handle on hover */
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #cc0000;
+  background: #C21708;
 }
 
 .modal-header .btn-close {
@@ -83,20 +93,20 @@ body {
 }
 
 .b-red {
-  background-color: #cc0000;
+  background-color: #C21708;
   color: #fff;
+  padding: 3px;
 }
 
 .banner {
-  padding: 2rem 0 1rem;
   background-color: #fff;
   background-image: url("../img/imagem_1.png");
-  min-height: 55rem;
+  min-height: 45rem;
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   font-family: "RatioModern-Small";
-  padding: 16rem 0rem 0rem;
-  background-position: 0 -5rem;
+  padding: 10rem 0rem 10rem 0rem;
 }
 
 .banner b {
@@ -111,7 +121,7 @@ body {
 
 .title h1 {
   font-family: "RatioModern";
-  font-size: 5rem;
+  font-size: 4.8rem;
   margin: 0;
   padding-right: 0.5rem;
   width: 60%;
@@ -120,13 +130,9 @@ body {
   letter-spacing: 2px;
 }
 
-.title_acordo {
-  padding: 0 1rem;
-}
-
 .title_acordo h2 {
   font-family: "RatioModern";
-  font-size: 4rem;
+  font-size: 3.5rem;
   padding: 1rem 0 2rem;
   margin: 0;
   color: #c40007;
@@ -135,12 +141,12 @@ body {
 }
 
 .title_acordo p {
-  font-size: 1.62rem;
-  padding: 1rem 7.7rem;
-  font-family: "RobotoRegular";
+  font-size: 1.25rem;
+  font-family: "RobotoLight";
   font-weight: 600;
+  line-height: 30px;
 }
- 
+
 .bg-red {
   background-color: #c40007;
   align-content: center;
@@ -160,19 +166,20 @@ body {
 
 .subtitle p {
   color: #fff;
-  font-family: "RobotoRegular";
+  font-family: "RobotoLight";
   font-size: 2rem;
   padding: 1% 15%;
 }
 
 .subtitle b {
-  font-family: "RobotoBold";
+  font-family: "RobotoRegular";
+  font-weight: 600;
   font-size: 2rem;
 }
 
 .btn-entenda {
   background-color: #fff;
-  width: 10%;
+  width: 160px;
   padding: 0.6rem 1.7rem 0 1rem;
   height: 3rem;
   font-size: 20px;
@@ -215,84 +222,61 @@ body {
 }
 
 .first-cite {
-  font-size: 1.5rem;
-  font-family: "RobotoRegular";
+  font-size: 1.25rem;
+  font-family: "RobotoLight";
   font-weight: 600;
-}
-
-.acordo-abs .first-cite {
-  font-size: 1.5rem;
-  font-family: "RobotoRegular";
-  font-weight: 600;
-  padding: 0 4rem;
 }
 
 .first-cite p {
-  margin: 5rem;
   color: #262626;
   font-weight: 600;
+  line-height: 30px;
+}
+
+.first-cite strong {
+  font-family: "RobotoBold";
 }
 
 .second-cite {
   font-family: "RobotoBold";
-  margin: 2.5rem;
-}
-
-.acordo-abs .second-cite {
-  font-family: "RobotoBold";
-  margin: 7rem 1rem 2rem 0;
-  position: relative;
-  left: -1%;
 }
 
 .start-quote {
   margin: -2rem 1rem;
   width: 4rem;
-  font-size: 4rem;
-  color: #cc0000;
+  font-size: 3.5rem;
+  color: #C21708;
   font-family: "RobotoRegular";
 }
 
 blockquote {
-  margin: 0 0rem;
-  width: 62%;
+  width: 75%;
+  color: #020202 !important;
   font-family: "RatioModern";
   font-weight: 600;
-}
-
-.acordo-abs blockquote {
-  margin: 0 0rem;
-  width: 100%;
-  font-size: 2rem;
-  font-family: "RatioModern";
-  font-weight: 600;
-  padding: 0 4rem 0 0;
+  font-size: 1.6rem;
 }
 
 cite {
-  font-family: "RobotoBold";
   text-decoration: none;
   font-style: normal;
   color: #666666;
 }
 
 .author {
-  margin: 0rem 11.5rem 3rem;
+  font-family: "RobotoLight";
   font-size: 1.2rem;
-  width: 45%;
   display: inline-flex;
 }
 
-.acordo-abs .author {
-  margin: 0rem auto;
-  font-size: 1.4rem;
-  display: block;
-  width: 100%;
-  padding: 0 15rem;
+.author b {
+  font-family: "RobotoBold";
 }
 
 cite:before {
   content: " \2015 ";
+  color: #BB1C07;
+  padding-right: 5px;
 }
 
 .imagem2 {
@@ -305,31 +289,30 @@ cite:before {
 
 .bg-white {
   background-color: #fff;
-  padding: 5rem 8rem 0 !important;
+  padding: 0rem 6rem 0 !important;
 }
 
 .projetos h2 {
   font-family: "RatioModern";
-  color: #cc0000;
-  font-size: 4rem;
+  color: #C21708;
+  font-size: 3.5rem;
   font-weight: 600;
 }
 
 .title_acordo .text-bold {
   font-family: "RobotoBold";
-  font-size: 1.8rem;
-  margin: 0 2rem 2rem;
-  color: #666666;
+  font-size: 1.6rem;
+  color: #313131;
   text-align: center;
 }
 
 .projetos .pp {
   font-family: "RobotoBold";
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   margin: 0 2rem 2rem;
   color: #2D2D2D;
   width: 60%;
-  line-height: 35px;
+  line-height: 30px;
   display: inline-flex;
 }
 
@@ -341,7 +324,7 @@ cite:before {
 }
 
 .projetos .orange {
-  color: #955B2F !important;
+  color: #93432E !important;
 }
 
 .projetos .projeto-icon {
@@ -352,57 +335,31 @@ cite:before {
 .acordo-abs {
   position: relative;
   z-index: 959;
-  top: -14rem;
+  margin-top: -14rem !important;
 }
 
 .fazer {
   position: absolute;
-  top: 20.4%;
-  right: 21%;
-}
-
-.btn-fazer {
-  color: #fc8332;
-  border: 2px solid #fc8332;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  position: relative;
-}
-
-.span-fazer {
-  position: absolute;
-  font-size: 30px;
-  top: -12px;
-  left: 3px;
+  top: 6%;
+  right: 0%;
+  cursor: pointer;
+  width: 200px;
+  height: 100px;
 }
 
 .fazer2 {
   position: absolute;
-  top: 32.6%;
-  right: 71%;
-}
-
-.btn-fazer2 {
-  color: #c4170c;
-  border: 2px solid #c4170c;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  position: relative;
-}
-
-.span-fazer2 {
-  position: absolute;
-  font-size: 30px;
-  top: -12px;
-  left: 3px;
+  bottom: 11%;
+  left: 0%;
+  cursor: pointer;
+  width: 200px;
+  height: 100px;
 }
 
 .fluxo h2 {
   font-family: "RatioModern";
-  color: #cc0000;
-  font-size: 4rem;
+  color: #C21708;
+  font-size: 3.5rem;
   font-weight: 600;
 }
 
@@ -410,8 +367,8 @@ cite:before {
   background-color: #FFA267;
   color: #fff;
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   padding: 20px;
   margin: auto
 }
@@ -419,7 +376,7 @@ cite:before {
 .fluxo .fluxo-item-number p {
   font-size: 3.2rem;
   margin: auto;
-  margin-top: -12px;
+  margin-top: -20px;
   font-weight: 600;
 }
 
@@ -451,7 +408,7 @@ cite:before {
 
 .fluxo .fluxo-item-border span {
   font-family: "RobotoRegular";
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   color: #666666;
   font-weight: 600;
   margin-top: auto;
@@ -460,21 +417,19 @@ cite:before {
 
 .repasses h2 {
   font-family: "RatioModern";
-  color: #cc0000;
-  font-size: 4rem;
+  color: #C21708;
+  font-size: 3.5rem;
   font-weight: 600;
-  width: 60%;
   display: inline-flex;
 }
 
 .repasses .pp {
   font-family: "RobotoBold";
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   margin: 0 2rem 2rem;
   color: #2D2D2D;
-  width: 60%;
   display: inline-flex;
-  line-height: 35px;
+  line-height: 30px;
 }
 
 .repasses .repasses-item {
@@ -497,7 +452,7 @@ cite:before {
 
 .repasses .repasses-item span {
   font-family: "RobotoRegular";
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   color: #060606;
   font-weight: 600;
   margin-top: auto;
@@ -510,6 +465,51 @@ cite:before {
 
 .grafico2 {
   position: relative;
-    left: -30%;
-    min-width: 100rem;
+  left: -30%;
+  min-width: 100rem;
+}
+
+.reparacao {
+  background-color: #fff;
+  background-image: url("../img/imagem_4.png");
+  min-height: 45rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  font-family: "RatioModern-Small";
+  padding: 4rem 0rem 4rem 0rem;
+}
+
+.reparacao-title {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.reparacao-title h2 {
+  font-family: "RatioModern";
+  font-size: 3.5rem;
+  margin: 0;
+  padding-right: 0.5rem;
+  color: #fff;
+  text-align: center;
+  letter-spacing: 2px;
+}
+
+.reparacao .reparacao-subtitle {
+  font-family: "RobotoLight";
+  font-size: 1.3rem;
+  color: #fff;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.reparacao .reparacao-subtitle strong {
+  font-family: "RobotoRegular";
+  font-weight: 600;
+}
+
+footer {
+  background-color: #C4160B;
+  height: 75px;
 }
