--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,96 +1,100 @@
-@media (max-width: 1440px) {}
-
-@media (max-width: 1024px) {}
-
-@media (max-width: 768px) {
-    .bg-white {
-        padding: 0px 10px 0px 10px !important;
-    }
-
-    .title h1 {
-        font-size: 2.2rem !important;
-        width: 100% !important;
-    }
-
-    .subtitle p {
-        font-size: 1rem;
-    }
-
-    .subtitle b,
-    .author {
-        font-size: 1rem !important;
-    }
-
-    h2 {
-        font-size: 2.2rem !important;
-    }
-
-    .fluxo .fluxo-item-border span {
-        font-size: 1.1rem !important;
-    }
-
-    .fluxo .fluxo-item-icon {
-        max-width: 45px !important;
-    }
-
-    .fluxo .fluxo-item-number p {
-        margin-top: -20px !important;
-    }
-
-    .fluxo .fluxo-item-number {
-        width: 70px !important;
-        height: 70px !important;
-        padding: 15px !important;
-    }
-
-    blockquote,
-    .projetos .pp,
-    .repasses .pp {
-        font-size: 1.4rem !important;
-    }
-
-    .first-cite p,
-    .projetos .pp,
-    .title_acordo p,
-    .repasses .pp {
-        line-height: 25px !important;
-    }
-
-    .first-cite,
-    .title_acordo p,
-    .projetos p,
-    .reparacao .reparacao-subtitle,
-    .repasses .repasses-item span {
-        font-size: 1.1rem !important;
-    }
-
-    .banner {
-        min-height: 25rem !important;
-        padding: 9rem 0rem 10rem 0rem !important;
-    }
-
-    .imagem2 {
-        min-height: 30rem !important;
-    }
-
-    .modal-fazer {
-        padding: 1rem 0rem;
-        width: 75%;
-    }
-    .modal-pagar {
-        padding: 1rem 0rem;
-        width: 80%;   
-    }
-
-    .fazer-content ul, 
-    .fazer-content li {
-        font-size: 0.9rem;
-    }
-    .barra__link .barra__title {
-        font-size: 0.6rem;
-    }
+@media (max-width: 1440px) {
 }
 
-@media (max-width: 576px) {}
+@media (max-width: 1024px) {
+}
 
-@media (max-width: 400px) {}
+@media (max-width: 768px) {
+  .bg-white {
+    padding: 0px 10px 0px 10px !important;
+  }
+
+  .title h1 {
+    font-size: 2.2rem !important;
+    width: 100% !important;
+  }
+
+  .subtitle p {
+    font-size: 1rem;
+  }
+
+  .subtitle b,
+  .author,
+  .fluxo .fluxo-item-border span {
+    font-size: 1rem !important;
+  }
+
+  h2 {
+    font-size: 2.2rem !important;
+  }
+
+  .fluxo .fluxo-item-icon {
+    max-width: 45px !important;
+  }
+  .fluxo .fluxo-col-3 {
+    margin: auto !important;
+  }
+  .fluxo .fluxo-item-number p {
+    margin-top: -20px !important;
+    font-size: 2.5rem !important;
+  }
+
+  .fluxo .fluxo-item-number {
+    width: 50px !important;
+    height: 50px !important;
+    padding: 10px !important;
+  }
+
+  blockquote,
+  .projetos .pp,
+  .repasses .pp {
+    font-size: 1.4rem !important;
+  }
+
+  .first-cite p,
+  .projetos .pp,
+  .title_acordo p,
+  .repasses .pp {
+    line-height: 25px !important;
+  }
+
+  .first-cite,
+  .title_acordo p,
+  .projetos p,
+  .reparacao .reparacao-subtitle,
+  .repasses .repasses-item span {
+    font-size: 1.1rem !important;
+  }
+
+  .banner {
+    min-height: 25rem !important;
+    padding: 9rem 0rem 10rem 0rem !important;
+  }
+
+  .imagem2 {
+    min-height: 30rem !important;
+  }
+
+  .modal-fazer {
+    padding: 1rem 0rem;
+    width: 75%;
+  }
+  .modal-pagar {
+    padding: 1rem 0rem;
+    width: 80%;
+  }
+
+  .fazer-content ul,
+  .fazer-content li {
+    font-size: 0.9rem;
+  }
+  .barra__link .barra__title {
+    font-size: 0.6rem;
+  }
+}
+
+@media (max-width: 576px) {
+}
+
+@media (max-width: 400px) {
+}
