--- a/css/responsive.css
+++ b/css/responsive.css
@@ -94,7 +94,13 @@
 }
 
 @media (max-width: 576px) {
+    .grafico {
+        min-width: 35rem;
+    }
 }
 
 @media (max-width: 400px) {
+    .grafico {
+        min-width: 20rem;
+    }
 }
