--- a/css/style.css
+++ b/css/style.css
@@ -300,9 +300,9 @@ cite:before {
   padding: 0rem 6rem 0 !important;
 }
 
-.grafico {
+/* .grafico {
   min-width: 60rem;
-}
+} */
 
 .projetos h2 {
   font-family: "RatioModern";
